// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip while loading scribing data: shattering-knife-loading-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Analyzing...
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Shattering Knife"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1qchq6h"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A scribing skill being analyzed...
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip with complete scribing data: shattering-knife-complete-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Shattering Knife"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1qchq6h"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Enemy
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Range
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            15 meters
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Duration
          </span>
          <span
            class="MuiBox-root css-johkra"
          >
            Instant
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Shattering Knife
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            Evidence: 
            Ability ID 217340 found in database
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Affix Scripts
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <div
            class="MuiBox-root css-171onha"
          >
            <span
              class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
            >
              Armor Breach
            </span>
            <span
              class="MuiTypography-root MuiTypography-caption css-1xtq6st-MuiTypography-root"
            >
              (
              80
              %)
            </span>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-uts9na-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Shattering Knife (15)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qvvcse-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Armor Reduction (8)
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      Twirl and throw an enchanted dagger at an enemy, which returns to you after a short delay and hits additional enemies in the path. The dagger shatters on impact, reducing the target's armor and dealing additional damage over time.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip with minimal scribing data: shattering-knife-minimal-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Shattering Knife"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1qchq6h"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            No signature script detected
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        />
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A scribing skill that throws a shattering dagger at enemies.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife (Player 1) should render Shattering Knife tooltip without scribing data (fallback): shattering-knife-no-scribing-data 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Unknown — Unknown Grimoire
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Shattering Knife"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Unknown
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Enemy
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A mysterious skill with unknown scribing configuration.
    </p>
  </div>
</div>
`;

exports[`SkillTooltip - Scribing Skills Snapshots Shattering Knife - Various Effect Types should render with mixed effect types (damage, debuff, buff): shattering-knife-mixed-effects 1`] = `
<div
  class="MuiPaper-root MuiPaper-outlined MuiPaper-rounded MuiCard-root u-fade-in skill-tooltip css-ldevn3-MuiPaper-root-MuiCard-root"
>
  <div
    class="MuiCardContent-root css-1p29psn-MuiCardContent-root"
  >
    <div
      class="MuiBox-root css-2q8ezs"
    >
      <div
        class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorSuccess MuiChip-outlinedSuccess css-157ap9r-MuiChip-root"
      >
        <span
          class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
        >
          Active
        </span>
      </div>
      <span
        class="MuiTypography-root MuiTypography-caption css-cajt4i-MuiTypography-root"
      >
        Scribing — Traveling Knife
      </span>
    </div>
    <div
      class="MuiBox-root css-7c8hho"
    >
      <div
        class="MuiStack-root css-1bml2fr-MuiStack-root"
      >
        <div
          class="MuiBox-root css-7xfrz6"
        >
          <img
            alt="Shattering Knife"
            class="MuiBox-root css-ykomfw"
            src="https://assets.rpglogs.com/img/eso/abilities/ability_grimoire_dualwield.png"
          />
        </div>
        <div
          class="MuiBox-root css-lufoed"
        >
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 css-1x8wwcu-MuiTypography-root"
          >
            Shattering Knife
          </h6>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-hljinv"
    >
      <div
        class="MuiBox-root css-1o3fvql"
      >
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Cost
          </span>
          <span
            class="MuiBox-root css-1qchq6h"
          >
            3240 Stamina
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Target
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            Enemy
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Range
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            15 meters
          </span>
        </div>
        <div
          class="MuiBox-root css-9wp72w"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-13gjock-MuiTypography-root"
          >
            Effects
          </span>
          <span
            class="MuiBox-root css-5bssb3"
          >
            4 Types
          </span>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <div
      class="MuiBox-root css-1upilqn"
    >
      <div
        class="MuiStack-root css-14irx59-MuiStack-root"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-pdgy6c-MuiTypography-root"
        >
          Grimoire: 
          Traveling Knife
        </span>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1so4hfi-MuiTypography-root"
        >
          Focus Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Shattering Knife
             (
            signature
            )
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            95
            % match confidence
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-19idom"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-1g9mk0o-MuiTypography-root"
        >
          Signature Script
        </span>
        <div
          class="MuiStack-root css-yzxa55-MuiStack-root"
        >
          <span
            class="MuiTypography-root MuiTypography-caption css-it9j4c-MuiTypography-root"
          >
            Shattering Knife
          </span>
          <span
            class="MuiTypography-root MuiTypography-caption css-12s7ml7-MuiTypography-root"
          >
            Evidence: 
            Multiple damage instances, Armor reduction effects, Healing components
          </span>
        </div>
      </div>
      <div
        class="MuiBox-root css-0"
      >
        <span
          class="MuiTypography-root MuiTypography-caption css-kh764n-MuiTypography-root"
        >
          Effects
        </span>
        <div
          class="MuiBox-root css-yi3mkw"
        >
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-uts9na-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Shattering Strike (12)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qvvcse-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Armor Shatter (8)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-qqf3vu-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Combat Stance (5)
            </span>
          </div>
          <div
            class="MuiChip-root MuiChip-outlined MuiChip-sizeSmall MuiChip-colorDefault MuiChip-outlinedDefault css-wybja1-MuiChip-root"
          >
            <span
              class="MuiChip-label MuiChip-labelSmall css-19m61dl-MuiChip-label"
            >
              Life Steal (3)
            </span>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root MuiDivider-fullWidth css-l65m1u-MuiDivider-root"
    />
    <p
      class="MuiTypography-root MuiTypography-body2 css-92fomv-MuiTypography-root"
    >
      A complex scribing skill that damages, debuffs enemies, buffs the caster, and provides healing.
    </p>
  </div>
</div>
`;
